--- a/reference-card.tex
+++ b/reference-card.tex
@@ -1,7 +1,7 @@
 \documentclass[14pt]{article}
 
 \usepackage[a4paper,margin=1cm,landscape]{geometry}
-\usepackage[utf8]{inputenc}
+\usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -29,8 +29,8 @@ import numpy as np
 \begin{minted}{python}
 series = pd.Series([79.98, 80.04, 80.02])
 series = pd.Series(
-	[1, 5, 9, 15, 20],
-	index=("mo", "di", "mi", "do", "fr")
+  [1, 5, 9, 15, 20],
+  index=("mo", "di", "mi", "do", "fr")
 )
 \end{minted}
 
@@ -38,13 +38,11 @@ series = pd.Series(
 \mintinline{python}{series.mean()}: Der Durchschnitt der Elemente von $series$ \\
 \mintinline{python}{series.median()}: Der Median der Elemente von $series$ \\
 \mintinline{python}{series.var()}: Die Varianz der Elemente von $series$ \\
-\mintinline{python}{series.std()}: Standardabweichung von $series$ 
-
-\begin{minted}{python}
-series["mi"]
-series.index
-series.size
-\end{minted}
+\mintinline{python}{series.std()}: Standardabweichung von $series$ \\
+\mintinline{python}{series.index}: Zeilenbeschrift der Elemente von $series$ \\
+\mintinline{python}{series.size}: Die Anzahl der Elemente von $series$ \\
+\mintinline{python}{series[1]}: Zugriff auf ein Elemente via Index \\
+\mintinline{python}{series["mi"]}: Zugriff via Zeilenbeschrift 
 
 \subsection*{Quantile und Quartilsdifferenz}
 \mintinline{python}{series.quantile(q=0.25, interpolation="midpoint")}
@@ -73,16 +71,17 @@ x*x
 
 \subsection*{Pandas DataFrame}
 \begin{minted}{python}
-temp = pd.DataFrame({
-	"Luzern": ([1,5,9,15,20,25,25]),
-	"Basel": ([3,4,12,16,18,23,32]),
-	"Zuerich": ([8,6,10,17,23,22,24])},
-	index=["jan","feb","mar","apr","mai","jun","jul"]
+frame = pd.DataFrame({
+  "Luzern": ([1, 5, 9, 15, 20]),
+  "Basel": ([3, 4, 12, 16, 18]),
+  "Zuerich": ([8, 6, 10, 17, 23])
+  }, index=["jan", "feb", "mar", "apr", "mai"]
 )
-temp.columns
-temp.mean(axis=1)
-temp.loc["mai":"jul","Luzern"]
-temp.loc[["mai","jul"],["Basel","Zuerich"]]
+
+frame.columns
+frame.mean(axis=1)
+frame.loc["mar":"mai","Luzern"]
+frame.loc[["mar","mai"],["Basel","Zuerich"]]
 
 mean = data.mean()['Physical.activity']
 data.loc[data['Physical.activity'] < mean, :]['Physical.activity']
