--- a/reference-card.tex
+++ b/reference-card.tex
@@ -14,10 +14,6 @@
 \setlength{\parindent}{0cm}
 \newminted[python]{python}{}
 \newmintinline{python}{breaklines}
-%\usemintedstyle{autumn}
-
-%\definecolor{textcolor}{rgb}{0.85,0.85,0.85}
-%\color{textcolor}
 
 \begin{document}
 \begin{center}
@@ -47,10 +43,15 @@ series = pd.Series(
 \pythoninline{series.median()}: Der Median der Elemente von series \\
 \pythoninline{series.var()}: Die Varianz der Elemente von series \\
 \pythoninline{series.std()}: Standardabweichung von series \\
+\pythoninline{series.count()}: Anzahl Elemente der series \\
+\pythoninline{series.round(0)}: Werte auf x Nachkomastellen runden \\
 \pythoninline{series.index}: Zeilenbeschrift der Elemente von series \\
 \pythoninline{series.size}: Die Anzahl der Elemente von series \\
 \pythoninline{series[1]}: Zugriff auf ein Elemente via Index \\
-\pythoninline{series["mi"]}: Zugriff via Zeilenbeschrift 
+\pythoninline{series["mi"]}: Zugriff via Zeilenbeschrift \\
+
+\pythoninline{series.hist(bins=[0,1,10,11,12])} \\
+Histogramm mit angegebenen Klassengrenzen plotten 
 
 \subsection*{Quantile und Quartilsdifferenz}
 \pythoninline{series.quantile(q=0.25, interpolation="midpoint")}
@@ -62,14 +63,19 @@ Quantile (z.B. 25\%, 75\%, \dots) von series \\
 Quartilsdifferenz von series berechnen
 
 \subsection*{Numpy Basics}
+\pythoninline{np.e}: Konstante mit Wert von $e$ \\
+\pythoninline{np.pi}:  Konstante mit Wert von $\pi$ \\
 \pythoninline{np.sqrt(2)}: Wurzel von Zahl berechnen \\
 \pythoninline{np.square(2)}: Quadrat von Zahl berechen \\
-\pythoninline{np.round(2.35, 1)}: Zahl auf x Nachkomastellen runden
+\pythoninline{np.abs(-45)}: Absolutwert einer Zahl berechnen \\
+\pythoninline{np.round(2.35, 1)}: Zahl auf x Nachkomastellen runden \\
 \pythoninline{np.corrcoef(x, y)}: Korrelationsmatrix berechnen \\
+\pythoninline{np.log(100)}: Natürlicher Logarithmus berechnen \\
+\pythoninline{np.log10(100)}: Logarithmus mit Basis 10 berechnen
 
 \subsection*{Numpy Arrays}
 \begin{python}
-arr = np.array([2, 1, 4, 5, -8, 10, 13])
+arr = np.array([2, 1, 4, 5, -8, 10])
 \end{python}
 
 \pythoninline{3*arr}: Jede Array-Komponent mit Zahl multiplizieren \\
@@ -80,7 +86,15 @@ In diesem Beispiel: [1.0, 1.333, 1.666, 2.0] \\
 
 \pythoninline{np.arange(start=1, stop=4, step=.6)} \\
 Zahlen von start bis stop mit inkrement step\\
-In diesem Beispiel: [1.0, 1.6, 2.2, 2.8, 3.4]
+In diesem Beispiel: [1.0, 1.6, 2.2, 2.8, 3.4] \\
+
+\pythoninline{new_arr = arr.reshape((n, m))} \\
+1-dimensionales Array in 2-dimensionales umwandeln \\
+Neues Array hat n Zeilen mit je m Elementen \\
+
+\pythoninline{new_arr = np.random.choice(arr, size=1000)} \\
+Neues Array mit der Grösse size erstellen und zufällig \\
+mit Werten aus dem übergebenen Array befüllen
 
 \subsection*{Pandas DataFrame}
 \begin{python}
@@ -163,16 +177,24 @@ Parameter x und y müssen auf Indizes der series verweisen \\
 \pythoninline{b, a = np.polyfit(x_series, y_series, deg=1)} \\
 \pythoninline{x = np.linspace(x_series.min(), x_series.max())} \\
 \pythoninline{plt.plot(x, a + b * x, c='orange')} \\
-Plotten einer Regressionsgerade
+Plotten einer Regressionsgerade, bei welcher die Daten \\
+einem Polynom ersten Grades angeglichen wurden \\
+
+\pythoninline{arr = np.array([24.4, 27.6, 27.8, 27.9, ...])} \\
+\pythoninline{st.probplot(arr, plot=plt)} \\
+QQ-Plot anhand einer Normalverteilung \\
+
+\pythoninline{plt.hist(series.T, bins=20, density=True)} \\
+Plotten eines Histograms mit der Fläche 1 unter den Balken
 
 \subsection*{Verteilungen}
-\pythoninline{uniform.cdf(x=1, loc=0, scale=7)} \\
+\pythoninline{st.uniform.cdf(x=1, loc=0, scale=7)} \\
 $P(X \leq 1)$ falls $X \sim Unif(0, 7)$ \\
 
-\pythoninline{uniform.pdf(x=1, loc=0, scale=7)} \\
+\pythoninline{st.uniform.pdf(x=1, loc=0, scale=7)} \\
 Dichte an der Stelle x = 3 falls $X \sim Unif(0, 7)$ \\
 
-\pythoninline{uniform.rvs(size=3, loc=0, scale=7)} \\
+\pythoninline{st.uniform.rvs(size=3, loc=0, scale=7)} \\
 uniform verteilte Zufallszahlen, $X_i \sim Unif(0, 7)$ \\
 
 \pythoninline{st.expon.cdf(x=4, loc=0, scale=1/3)} \\
@@ -181,7 +203,6 @@ $P(X \leq 4)$ falls $X \sim Exp(3)$ \\
 \pythoninline{st.expon.pdf(x=1, loc=0, scale=1/3)} \\
 Dichte an der Stelle x = 1 falls $X \sim Exp(3)$ \\
 
-
 \pythoninline{st.norm.cdf(x=130, loc=100, scale=15)} \\
 $P(X \leq 130)$ falls $X \sim \mathcal{N}(100, 15^2)$ \\
 
@@ -189,7 +210,31 @@ $P(X \leq 130)$ falls $X \sim \mathcal{N}(100, 15^2)$ \\
 Quantile einer Normalverteilung \\
 
 \pythoninline{st.norm.cdf(x=1.5)} \\
-Standardnormalverteilung
+Standardnormalverteilung \\
+
+\pythoninline{st.binom.cdf(k=5100, n=10000, p=0.5)} \\
+$P(X \leq 5100)$ falls $X \sim Bin(10000, 0.5)$ \\
+
+\pythoninline{st.t.cdf(x=168, df=149, loc=164, scale=10/np.sqrt(150))} \\
+$P[\overline{X}_{150} \leq 168]$ falls $u = 164$, $\hat{o} = 10$ und $T \sim t_{149}$ \\
+
+\pythoninline{st.t.ppf(0.05, df=149)} \\
+Quantile einer T-Verteilung mit n Freiheitsgrade \\
+
+\pythoninline{st.norm.rvs(size=n)}\\
+generiert n normalverteilte Zahlen \\
+
+\pythoninline{st.t.rvs(size=n, df=v)} \\
+generiert n t-verteilte Zahlen mit v Freiheitsgrade \\
+
+\pythoninline{st.chi2.rvs(size=n, df=v)} \\
+generiert n chi-verteilte Zahlen mit v Freiheitsgrade
+
+\subsection*{Integral berechnen}
+\pythoninline{from scipy.integrate import quad} \\
+\pythoninline{f = lambda x: x * (15 - x/4)} \\
+\pythoninline{ans, _ = quad(f, 0, 60)} \\
+In diesem Fall das Integral: $\int_{0}^{60} x * (15 - \frac{x}{4})$
 
 \end{multicols*}
 \end{document}
