Fix small mistake

--- a/reference-card.tex
+++ b/reference-card.tex
@@ -185,9 +185,9 @@ Empirische kumulative Verteilungsfunktion plotten \\
 \pythoninline{series.plot(kind='box', title='Methode A')} \\
 Boxplot von series erstellen und Titel des Plots festlegen \\
 
-\pythoninline{series.plot(kind='scatter', x='wine', y='mor')} \\
+\pythoninline{frame.plot(kind='scatter', x='wine', y='mor')} \\
 Streudiagramm mit zwei ausgewählten Achsen erstellen \\
-Parameter x und y müssen auf Indizes der series verweisen \\
+Parameter x und y müssen auf Indizes des frame verweisen \\
 
 \pythoninline{b, a = np.polyfit(x_series, y_series, deg=1)} \\
 \pythoninline{x = np.linspace(x_series.min(), x_series.max())} \\
