Explain distributions a little bit better

--- a/reference-card.tex
+++ b/reference-card.tex
@@ -203,6 +203,11 @@ QQ-Plot anhand einer Normalverteilung \\
 Plotten eines Histograms mit der Fläche 1 unter den Balken
 
 \subsection*{Verteilungen}
+\pythoninline{cdf}: $P(X \leq x)$ \\
+\pythoninline{ppf}: Quantile der Verteilung \\
+\pythoninline{pdf}: Dichte an der Stelle $x$ \\
+\pythoninline{rvs}: $size$ Zufallszahlen generieren \\
+
 \pythoninline{st.uniform.cdf(x=1, loc=0, scale=7)} \\
 $P(X \leq 1)$ falls $X \sim Unif(0, 7)$ \\
 
